tests/generics/generic_struct_without_generic_type.out
Error in ..\tests\generics\generic_struct_without_generic_type.sld:1:16: Declared struct A as generic, but no $Type was used. Maybe you forgot it?
