tests/generics/generic_struct_without_generic_type.sld
generic struct A {
    a: int;
}

func main() {
    let a = new A(3);
}